[package]
name = "pixelvault"
version = "1.0.2"
edition = "2024"
authors = ["Firebleu"]
description = "Gestionnaire de mots de passe par stéganographie - Password manager using steganography / POC"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.3"
colored = "2.1"

# Cryptographie
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Sérialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing
image = "0.25"

# Utilitaires
anyhow = "1.0"
base64 = "0.22"
zeroize = { version = "1.7", features = ["derive"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
